fixing the alignment of the library.html file

--- a/css/library.css
+++ b/css/library.css
@@ -1,12 +1,13 @@
 .container {
   background-color: rgb(67, 95, 187);
   height: auto;
-  width: 100%;
+  width: 400px;
   border-radius: 5px;
   border: 3px solid rgb(16, 72, 108);
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 40px auto; /* centers horizontally, adds some top/bottom space */
 }
 
 .container h1 {
@@ -42,7 +43,7 @@
   background: rgb(106, 125, 137);
   border: black solid 1px;
   outline: none;
-  height: px;
+  height: 25px;
   width: 100%;
   border-radius: 20px;
   color: white;
